<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_centerInParent="true"
        android:src="@drawable/logo_bromo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/logo"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/mainGreen"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/welcome1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:text="@string/app_welcome1"
        />

    <TextView
        android:id="@+id/welcome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome1"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:text="@string/app_welcome2"
        />

    <RadioGroup
        android:checkedButton="@+id/peternak_button"
        android:id="@+id/toggle"
        android:layout_below="@id/welcome2"
        android:layout_width="297dp"
        android:layout_height="46dp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/control_switch_background_border"
        android:orientation="horizontal">
        <RadioButton
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="3dp"
            android:id="@+id/peternak_button"
            android:background="@drawable/control_switch_background_selector"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/job_button1"
            android:fontFamily="@font/inter_regular"
            android:textColor="@drawable/control_switch_color_selector"/>
        <RadioButton
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="3dp"
            android:id="@+id/pemilik_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/control_switch_background_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/job_button2"
            android:fontFamily="@font/inter_regular"
            android:textColor="@drawable/control_switch_color_selector"/>
    </RadioGroup>

    <Button
        android:id="@+id/next_button"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/toggle"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_shape"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_regular"
        android:text="lanjut"/>

</RelativeLayout>