<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JobSelect">

    <ImageView
        android:id="@+id/logo_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:paddingHorizontal="73dp"
        android:paddingTop="51dp"
        android:src="@drawable/logo_text" />

    <ImageView

        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_text"
        android:layout_marginTop="19dp"
        android:src="@drawable/logo_without_text"
        />

    <TextView
        android:id="@+id/welcome1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_regular"
        android:textStyle="bold"
        android:text="@string/app_welcome1"
        />

    <TextView
        android:id="@+id/welcome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-1dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/app_welcome2"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"/>

    <RadioGroup
        android:checkedButton="@+id/peternak_button"
        android:id="@+id/toggle"
        android:layout_below="@id/welcome2"
        android:layout_width="279dp"
        android:layout_height="67dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/control_switch_background_border"
        android:orientation="horizontal">
        <RadioButton
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="3dp"
            android:id="@+id/peternak_button"
            android:background="@drawable/control_switch_background_selector"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/job_button1"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="24sp"
            android:lineHeight="29sp"
            android:textColor="@drawable/control_switch_color_selector"/>
        <RadioButton
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="3dp"
            android:id="@+id/pemilik_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/control_switch_background_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/job_button2"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="24sp"
            android:lineHeight="29sp"
            android:textColor="@drawable/control_switch_color_selector"/>
    </RadioGroup>

    <Button
    android:id="@+id/next_button"
    android:layout_width="277dp"
    android:layout_height="60dp"
    android:layout_marginTop="31dp"
    android:layout_below="@id/toggle"
    android:layout_centerHorizontal="true"
    android:background="@drawable/button_shape"
    android:textColor="@color/white"
    android:fontFamily="@font/montserrat_semibold"
    android:textSize="16sp"
    android:text="lanjut"/>

</RelativeLayout>