<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Password"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="#DEF8EF">
        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/panduan"
            android:backgroundTint="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_panduan"/>
        <TextView
            android:id="@+id/text_panduan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Panduan Aplikasi"
            android:textSize="23dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <View
            android:layout_width="260dp"
            android:layout_height="8dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/underline1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <View
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/logo_tanpa_nama"
            android:layout_marginLeft="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_panduan"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginHorizontal="60dp"
            android:layout_marginVertical="10dp"
            android:textStyle="bold"
            android:text="@string/panduan_aplikasi_keterangan"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Tentang BroMo"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="12dp"
            android:text="@string/tentang_bromo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Tim Pengembang"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/tim_pengembang"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Stakeholder"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1. Imam Fahrurrozi, S.T., M.Cs."
            android:textSize="12dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Project Manager"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1. Daffa Askar Fathin"
            android:textSize="12dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2. Aprillia Wulandari"
            android:textSize="12dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="UI/UX Team"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1. Rifa Indra Setiawan"
            android:textSize="12dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2. Anisah Salma Rafida"
            android:textSize="12dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Front End Team"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1. Ilham Rafi Mahameru"
            android:textSize="12dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2. Muhammad Harits Detya Irawan"
            android:textSize="12dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Back End Team"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1. Muhammad Nur Kafabih"
            android:textSize="12dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2. Verlino Raya Fajri"
            android:textSize="12dp"/>
    </LinearLayout>
</LinearLayout>